<resources>
    <string name="app_name">Movie/Series Watchlist</string>
    <string name="action_settings">Settings</string>
    <string name="sort_text">Sort by:</string>
    <string name="title_activity_add">Add Movie/Series</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="hint_title">Title</string>
    <string name="hint_platform">Platform</string>
    <string name="hint_release">Release</string>
    <string name="val_title">Please fill in a title</string>
    <string name="val_rating">Please fill in a rating</string>
    <string name="val_type">Please fill in either movie or series</string>
    <string name="val_date">Please fill in a valid date</string>
    <string name="val_date_after_today">Date has to be after today</string>

    <string name="item_release">Release: %s</string>

    <string name="item_deleted">Successfully deleted %s</string>
    <string name="item_added">Successfully added %s</string>
    <string name="item_updated">Successfully updated %s</string>
    <string name="undo">UNDO</string>
    <string name="hint_type">Movie/Series...</string>
    <string name="hint_rating">IMDB Rating...</string>
    <string name="hint_notes">Additional Notes</string>
    <string name="hint_reminder">Reminder...</string>
    <string name="sort">Sorting list</string>
    <string name="btn_confirm_text">Confirm</string>

    <string-array name="sortOpts">
        <item>Title</item>
        <item>Rating</item>
    </string-array>
</resources>
